--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "aws-sdk": "^2.579.0",
     "easy-table": "^1.1.1",
+    "elo-js": "^1.0.1",
     "lodash": "^4.17.15",
+    "nodeplotlib": "^0.6.4",
     "querystring": "^0.2.0"
   }
 }
