--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "easy-table": "^1.1.1",
     "elo-js": "^1.0.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "nodeplotlib": "^0.6.4",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "uuid": "^3.3.3"
   }
 }
